* tabulatedelays: option added to print the antenna coordinates as comments in the output
* read and write J2000 station position polynomials; option in tabulatedelays to evaluate
* new utility: difxfilelist: read through .input file(s) and list files to be read, data format, ...
* capture ephemeris file and object number in .calc file

3.6.0
* Post DiFX 2.5
* Remove unneeded source file
* New functions: evaluateDifxInputUVW, getDifxDatastreamBandPol, getDifxDatastreamBandFreqIdAndPol
* Adding built-in catalog of some VLBI station information -- will be useful for setting antenna diameters and mount types in FITS-IDI files, and may have other uses long term.
* Infrastructure for introspection into reason for splitting FITS files
* tabulatedelays: add option to print one line at the center of each integration time
* tabulatedelays: add option to add clock model to delay
* tabulatedelays: add option to simply print the clock model
* print BW and FREQ with more significant digits
* Version for DiFX-2.6, Mar 4, 2019

3.5.0
* Post DiFX 2.4
* Consider equality of EOP values when merging jobs
* Implement EOP merging modes.  Currently this will be set automatically based total number of days spanned by EOPs.
  - Relaxed means merge EOPs if they are consistent, with a resulting maximum of 6 days of values
  - Strict means only merge if EOPs cover the same days
  - In either case, refuse to merge if the EOPs are different on any day
* Replaced string with enums for three parameter names
  - Note: this breaks API compatibility.  Be sure to recompile all dependent code after updating difxio.
* Fix merging of tables containing model extensions when different scans have different subsets of antennas
* New utility: tabulatedelays.  Will make a list of evaluated delay polynomials every 24 seconds (on the usual grid of model points).  Delays and rates are printed.
* New utility: reducepoly.  Will reduce the order of the delay model polynomial.  [Needs GSL]